[FIX] TelegramBot added getting htmlPArts, callbackData service, extended menu