@@ -204,7 +204,10 @@
 							<version>${lombok-mapstruct-binding.version}</version>
 						</dependency>
 					</annotationProcessorPaths>
-				</configuration>
+                    <source>18</source>
+                    <target>18</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.openapitools</groupId>
